// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - features - LN-10-global - cardVerticalCarrusel - default should match snapshot 1`] = `
<div>
  <div
    data-tw="true"
  >
    <article
      class="flex relative overflow-hidden relative ratio-9-16 border border-thin border-neutral-light-200 border-all card-vertical-carousel cursor-pointer bg-gradient-accent"
    >
      <div
        class="flex jc-center ai-center relative overflow-hidden h-100 w-100 ratio-9-16 -z-1 w-full h-full"
      >
        <div
          data-testid="video-mock"
        >
          <span>
            video.mp4
          </span>
          <span>
            poster.jpg
          </span>
          <span>
            Paused
          </span>
        </div>
      </div>
      <div
        class="flex flex-column w-100 absolute ai-center bottom-0 gap-16 px-16 pb-32 breark-word w-full"
        style="gap: 12px;"
      >
        <span
          class="bg-black rounded-16 uppercase z-1 text-[12px] px-8 py-6 text-white"
        >
          Test Badge
        </span>
        <h2
          class="text prumo prumo-semibold text-light-0 text-24 text-center"
        >
           
          Test Title
        </h2>
        <div
          class="flex ai-center gap-8 text-14 leading-0 text-neutral-light-100"
        >
          <div
            class="h-20 w-20 flex ai-center jc-center"
          >
            <mock-ds-common-icon
              classname="custom-class"
              name="mediaPlay"
              size="20"
            />
          </div>
          <time
            class="pr-8"
          >
            02:00
          </time>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`components - features - LN-10-global - cardVerticalCarrusel - default should match snapshot without title 1`] = `
<div>
  <div
    data-tw="true"
  >
    <article
      class="flex relative overflow-hidden relative ratio-9-16 border border-thin border-neutral-light-200 border-all card-vertical-carousel cursor-pointer bg-gradient-accent-sm"
    >
      <div
        class="flex jc-center ai-center relative overflow-hidden h-100 w-100 ratio-9-16 -z-1 w-full h-full"
      >
        <div
          data-testid="video-mock"
        >
          <span>
            video.mp4
          </span>
          <span>
            poster.jpg
          </span>
          <span>
            Paused
          </span>
        </div>
      </div>
      <div
        class="flex flex-column w-100 absolute ai-center bottom-0 gap-16 px-16 pb-32 breark-word w-full"
        style="gap: 12px;"
      >
        <span
          class="bg-black rounded-16 uppercase z-1 text-[12px] px-8 py-6 text-white"
        >
          Test Badge
        </span>
        <div
          class="flex ai-center gap-8 text-14 leading-0 text-neutral-light-100"
        >
          <div
            class="h-20 w-20 flex ai-center jc-center"
          >
            <mock-ds-common-icon
              classname="custom-class"
              name="mediaPlay"
              size="20"
            />
          </div>
          <time
            class="pr-8"
          >
            02:00
          </time>
        </div>
      </div>
    </article>
  </div>
</div>
`;
